--- a/source/pages/index/_teaser.haml
+++ b/source/pages/index/_teaser.haml
@@ -1,5 +1,5 @@
 .teaser
-  .teaser-overlay#teaserOverlay
+  %canvas.teaser-overlay#teaserOverlay
   .page
     .wrapper
       %h1.wow.fadeInUp#teaserText
