--- a/source/pages/work/_testimonials.haml
+++ b/source/pages/work/_testimonials.haml
@@ -22,5 +22,5 @@
           %blockquote
             Mariusz has an incredibly knowledge–based approach to design, that helped me as a CTO to easily get behind the framework he built for everything from brand to product. Whenever I need to decide which design angle is best for us, Mariusz asks the right questions to get me there.
           .testimonials-person-meta
-            Arvid E. Picciani, CTO,
+            Arvid E. Picciani, former CTO, 
             = link_to "airfy", "http://airfy.com"
