Bring blog link back

--- a/source/layouts/_navigation.haml
+++ b/source/layouts/_navigation.haml
@@ -5,4 +5,6 @@
     %li
       = link_to "About", "/index.html#about"
     %li
+      = link_to "Writing", "http://writing.mariusz.cc", target: "_blank"
+    %li
       = link_to "Contact", "/index.html#contact"
