--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -20,11 +20,12 @@
     = partial "layouts/content_experiments"
 
     = stylesheet_link_tag "vendor/normalize", "site"
-
-    = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"
-    = javascript_include_tag "site"
   
   %body{class: page_classes}
     = yield
 
     = partial "layouts/footer"
+
+    = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"
+    = javascript_include_tag "conversational-form.min.js"
+    = javascript_include_tag "site"
