--- a/source/stylesheets/pages/_contact.scss
+++ b/source/stylesheets/pages/_contact.scss
@@ -73,3 +73,20 @@
     }
   }
 }
+
+.contact-form-chat {
+  min-height: 500px;
+
+  cf-chat:before {
+    display: none;
+  }
+
+  .conversational-form {
+    background: transparent;
+  }
+}
+
+.contact-form-form {
+  opacity: 0;
+  height: 0;
+}
