--- a/source/contact.html.haml
+++ b/source/contact.html.haml
@@ -11,8 +11,8 @@ title: Let's create something awesome together
 
       %p 
         Got a nice design project and you'd like me to work on it?
-        Just fill in the form below and I'll respond as soon as
-        possible (usually a couple of days).
+        Just answer a couple of questions below and I'll be in touch
+        as soon as possible (usually a couple of days).
 
     .contact-form-wrapper
       = partial "pages/contact/form"
