--- a/source/pages/contact/_form.haml
+++ b/source/pages/contact/_form.haml
@@ -1,4 +1,5 @@
-%form{action: "https://formkeep.com/f/e5bf280899d4", "accept-charset": "utf-8", method: "post"}
+%form{action: "https://formspree.io/xzravgyx", "accept-charset": "utf-8", method: "post"}
+  %input{type: "text", name: "_gotcha", style: "display: none"}
   %p
     %label{for: "name"} Your name:
     %input{type: "text", name: "name", id: "name", required: "true", placeholder: "Awesome Person"}
@@ -10,9 +11,11 @@
       Your budget:
       %span.hint if you're not sure, it's okay to just guesstimate
     %select{name: "budget", id: "budget"}
-      %option{value: "10-25k"} $10.000 - $20.000
-      %option{value: "20-35k"} $20.000 - $35.000
-      %option{value: "50k+"} $35.000+
+      %option{value: "equity"} low budget, but we can offer equity
+      %option{value: "5-10k"} $5,000 - $20,000
+      %option{value: "10-25k"} $10,000 - $20,000
+      %option{value: "20-35k"} $20,000 - $35,000
+      %option{value: "35k+"} $35,000+
   %p.long-text
     %label
       In a couple of words, what's your project about:
